--- a/caida.html
+++ b/caida.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Caida Libre</title>
+		<title>Free Fall</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,9 +24,9 @@
 					<div id="main">
 						<div class="inner">
                             <center>
-                                <h1>Calcular Caída Libre</h1>
+                                <h1>Calculate Free Fall</h1>
 							<main>
-                                <label for="num1">Ingrese Tiempo de Caída:</label>
+                                <label for="num1">Enter Drop Time:</label>
                                 <input [type="text"] { text-align:center; }. id="num1">
                                 <br>
                                 <br>
@@ -37,23 +37,23 @@
                                 <br>
                                 <br>
                                 <section>
-                                    <h2>Resultados y Procedimientos:</h2>
+                                    <h2>Results and Procedures:</h2>
                                     <center>
                                     <div class="table-wrapper">
                                         <table>
                                                 <tr>
-                                                    <th>Altura (M):													</th>
-                                                    <th>Velocida Final (M/S):</th>
+                                                    <th>Height (M):												</th>
+                                                    <th>Final Speed (M/S):</th>
                                                 </tr>
                                                 <tr>
                                                     <td><div id="resultado1"></div></td>
                                                     <td><div id="resultado2"></div></td>
                                                 </tr>
                                                 <tr>
-                                                    <td><p>Altura en Metros (H) = 
-                                                        <br>(Gravedad de la Tierra(9.81M/S)* Tiempo al Cuadrado (T^2)) / 2</p></td>
-                                                    <td><p>Velocidad Final (M/S) =
-                                                        <br>Gravedad de la Tierra(9.81M/S) * Tiempo (T)
+                                                    <td><p>Height in Meters (H) = 
+                                                        <br>(Earth Gravity(9.81M/S)* Time Squared (T^2)) / 2</p></td>
+                                                    <td><p>Final Speed (M/S) =
+                                                        <br>Earth Gravity(9.81M/S) * Time (T)
                                                     </p></td>
                                                 </tr>
                                         </table>
