--- a/planoinclinado.html
+++ b/planoinclinado.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Plano Horizontal</title>
+		<title>Inclined Plane</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,25 +22,25 @@
 					<div id="main">
 						<div class="inner">
                             <center>
-							<h1>Calcular Plano Inclinado.</h1>
+							<h1>Calculate Inclined Plane.</h1>
 							<main>
-                                <label for="num1">Ingrese Masa del Objeto:</label>
+                                <label for="num1">Enter Object Mass:</label>
                                 <input [type="text"] { text-align:center; }. id="num1">
                                 <br>
                                 <br>
-                                <label for="num2">Ingrese Fuerza Aplicada (FA):</label>
+                                <label for="num2">Enter Applied Force (AF):</label>
                                 <input [type="text"] { text-align:center; }. id="num2">
                                 <br>
                                 <br>
-                                <label for="num3">Ingrese Ángulo de Elevación:</label>
+                                <label for="num3">Enter Elevation Angle:</label>
                                 <input [type="text"] { text-align:center; }. id="num3">
                                 <br>
                                 <br>
-                                <label for="num4">Ingrese Distancia Recorrida:</label>
+                                <label for="num4">Enter Distance Traveled:</label>
                                 <input [type="text"] { text-align:center; }. id="num4">
                                 <br>
                                 <br>
-                                <label for="num5">Ingrese Coeficiente de Fricción (Uc):</label>
+                                <label for="num5">Enter Friction Coefficient (Uc):</label>
                                 <input [type="text"] { text-align:center; }. id="num5">
                                 <br>
                                 <br>
@@ -51,18 +51,18 @@
                                 <br>
                                 <br>
                                 <section>
-                                    <h2>Resultados y Procedimientos:</h2>
+                                    <h2>Results and Procedures:</h2>
                                     <div class="table-wrapper">
                                         <table>
                                             <thead>
                                                 <tr>
-                                                    <th>Peso del Objeto (N):													</th>
-                                                    <th>Fuerza Aplicada en el Vector X (N):													</th>
-                                                    <th>Fuerza Aplicada en el Vector Y (N):</th>
-                                                    <th>Fuerza Normal (N):</th>
-                                                    <th>Fuerza Cinética (N):</th>
-                                                    <th>Trabajo Mínimo (J):</th>
-                                                    <th>Trabajo Resultante (J):</th>
+                                                    <th>Object weight (N):													</th>
+                                                    <th>Force Applied in Vector X (N):													</th>
+                                                    <th>Force Applied in the Y Vector (N):</th>
+                                                    <th>Normal Force (N):</th>
+                                                    <th>Kinetic force (N):</th>
+                                                    <th>Minimum Work (J):</th>
+                                                    <th>Resulting Work (J):</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
@@ -76,24 +76,24 @@
                                                     <td><div id="resultado7"></div></td>
                                                 </tr>
                                                 <tr>
-                                                    <td><p>Peso en Newtons (W) = 
-                                                        <br>(Masa (KG))*(Gravedad de la Tierra(9.81M/S))</p></td>
-                                                    <td><p>Fuerza Aplicada en X =
-                                                        <br>(Coseno del Ángulo)*(Fuerza Aplicada (N))
+                                                    <td><p>Weight in Newtons (W) =
+                                                        <br>(Mass (KG))*(Earth Gravity(9.81M/S))</p></td>
+                                                    <td><p>Force Applied at X =
+                                                        <br>(Cosine of Angle)*(Applied Force (N))
                                                     </p></td>
-                                                    <td><p>Fuerza Aplicada en Y =
-                                                        <br>(Seno del Ángulo)*(Fuerza Aplicada (N))</p></td>
-                                                    <td><p>Fuerza Normal = 
-                                                        <br> Peso en Newtons - Fuerza Aplicada en Y
+                                                    <td><p>Applied Force at Y =
+                                                        <br>(Sine of Angle)*(Applied Force (N))</p></td>
+                                                    <td><p>Normal Force =
+                                                        <br> Weight in Newtons - Applied Force in Y
                                                     </p></td>
-                                                    <td><p>Fuerza Cinética = 
-                                                        <br>(Fuerza Normal)*(Coeficiente de Fricción)
+                                                    <td><p>Kinetic Force = 
+                                                        <br>(Normal Force)*(Coefficient of Friction)
                                                     </p></td>
-                                                    <td><p>Trabajo Mínimo = 
-                                                        <br>(Fuerza Resultante o Fuerza Cinética)*(Distancia)
+                                                    <td><p>Minimum Labor =
+                                                        <br>(Resulting Force or Kinetic Force)*(Distance)
                                                     </p></td>
-                                                    <td><p>Trabajo Resultante = 
-                                                        <br>Sumatoria de Fuerzas (Fuerza Aplicada - Fuerza Cinética)*(Distancia)
+                                                    <td><p>Resulting Work = 
+                                                        <br>Sum of Forces (Applied Force - Kinetic Force)*(Distance)
                                                     </p></td>
                                                 </tr>
                                             </tbody>
