--- a/vertical.html
+++ b/vertical.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Tiro Vertical</title>
+		<title>Vertical Shooting</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,12 +21,12 @@
 					<div id="main">
 						<div class="inner">
 							<center>
-								<main><h1>Calcular Tiro Vertical</h1>
-                                <label for="tiempo">Introduzca el tiempo:</label>
+								<main><h1>Calculate Vertical Draft</h1>
+                                <label for="tiempo">Enter the time:</label>
                                 <input [type="text"] { text-align:center; }. id="tiempo">
                                 <br>
                                 <br>
-                                <label for="velo">Introduzca la velocidad inicial:</label>
+                                <label for="velo">Enter the initial velocity:</label>
                                 <input [type="text"] { text-align:center; }. id="velo">
                                 <br>
                                 <br>
@@ -37,15 +37,15 @@
                                 <br>
                                 <br>
                                 <section>
-                                    <h2>Resultados y Procedimientos:</h2>
+                                    <h2>Results and Procedures:</h2>
                                     <div class="table-wrapper">
                                         <table>
                                             <thead>
                                                 <tr>
-                                                    <th>Velocidad Final (m/s):													</th>
-                                                    <th>Altura (m):													</th>
-                                                    <th>Altura Máxima (m):</th>
-                                                    <th>Tiempo en el Aire (s):</th>
+                                                    <th>Final velocity (m/s):												</th>
+                                                    <th>Height (m):												</th>
+                                                    <th>Maximum height (m):</th>
+                                                    <th>Time in Air (s):</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
@@ -56,14 +56,14 @@
                                                     <td><div id="resultado5"></div></td>
                                                 </tr>
                                                 <tr>
-                                                    <td><p>(Velocidad Final (VF) - Velocidad Inicial (Vo))/Gravedad (g)</p></td>
-						<td><p>Altura (h) =
-							<br>(Velocidad inicial (Vo))*(Tiempo (t))+(Gravedad (g)*(Tiempo al Cuadrado (T))
+                                                    <td><p>(Final Velocity (FV) - Initial Velocity (Vo))/Gravity (g)</p></td>
+						<td><p>Height (h) =
+							<br>Initial speed(Vo)*(Time (t))+(Gravity (g))*(Time Squared (T))
 						</p></td>
-						<td><p>Altura Máxima (hmax) =
-							<br>(- Velocidad Inicial al Cuadrado (Vo)/2*Gravedad (g))</p></td>
+						<td><p>Maximum height (hmax) =
+							<br>(- Initial Velocity Squared (Vo)/2*Gravity (g))</p></td>
 							<td><p>taire = 
-									<br>(Tiempo / Coeficiente de Fricción) * 2
+									<br>(Time / Friction Coefficient) * 2
 								</p></td>
                                                 </tr>
                                             </tbody>
